Update install_thehive.md